--- a/index.html
+++ b/index.html
@@ -135,52 +135,20 @@
                 <h2>My Projects</h2>
             </div>
             <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1674&q=80" alt="E-commerce Platform">
-                    </div>
-                    <div class="project-info">
-                        <h3>E-commerce Platform</h3>
-                        <p>Full-featured online store with shopping cart, user authentication, and payment processing.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">React</span>
-                            <span class="project-tag">Node.js</span>
-                            <span class="project-tag">MongoDB</span>
-                            <span class="project-tag">Stripe API</span>
-                        </div>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="Data Visualization Dashboard">
+                        <img src="" alt="">
                     </div>
                     <div class="project-info">
-                        <h3>Data Visualization Dashboard</h3>
-                        <p>Interactive dashboard for analyzing and visualizing large datasets with real-time updates.</p>
+                        <h3>Voting App</h3>
+                        <p>A page with animated glow effects, password-protected voting, and mobile-responsive design for an engaging experience.</p>
                         <div class="project-tags">
-                            <span class="project-tag">D3.js</span>
-                            <span class="project-tag">Python</span>
-                            <span class="project-tag">Flask</span>
-                            <span class="project-tag">PostgreSQL</span>
+                            <span class="project-tag">HTML</span>
+                            <span class="project-tag">CSS</span>
+                            <span class="project-tag">JavaScript</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1760&q=80" alt="Task Management App">
-                    </div>
-                    <div class="project-info">
-                        <h3>Task Management App</h3>
-                        <p>Collaborative project management tool with team assignments, progress tracking, and reporting.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">Vue.js</span>
-                            <span class="project-tag">Express</span>
-                            <span class="project-tag">Socket.io</span>
-                            <span class="project-tag">MySQL</span>
-                        </div>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="/FLACK" class="btn">View Project</a>
                     </div>
                 </div>
             </div>
