--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="" alt="">
+                        <img src="/FLACK/flack.png" alt="" style="width: 100%; height: 160%;">
                     </div>
                     <div class="project-info">
                         <h3>Voting App</h3>
@@ -147,6 +147,7 @@
                             <span class="project-tag">HTML</span>
                             <span class="project-tag">CSS</span>
                             <span class="project-tag">JavaScript</span>
+                            <span class="project-tag">FireBase RealTime DataBase</span>
                         </div>
                         <a href="/FLACK" class="btn">View Project</a>
                     </div>
