--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -36,7 +35,7 @@
             <p>I'm a motivated and personable Year 3 Student pursuing a bachelor's degree in Computer Science at the Chinese University of Hong Kong. I am familiar with programming in VBA, Python, C, Java, JavaScript, Node.js technologies.</p>
             <div>
                 <a href="#projects" class="btn">View My Work</a>
-                <a href="#contact" class="btn btn-outline">Contact Me</a>
+                <a href="#footer" class="btn btn-outline">Contact Me</a>
             </div>
         </div>
     </section>
@@ -90,7 +89,7 @@
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <span class="timeline-date">July 2025 - Augest 2025</span>
+                        <span class="timeline-date">July 2025 - August 2025</span>
                         <h3>Technical Support</h3>
                         <p>Civil Aviation Department</p>
                     </div>
@@ -135,13 +134,12 @@
                 <h2>My Projects</h2>
             </div>
             <div class="projects-grid">
-                </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="/FLACK/flack.png" alt="" style="width: 100%; height: 160%;">
+                        <img src="/FLACK/flack.png" alt="" style="width: 100%; height: 130%;">
                     </div>
                     <div class="project-info">
-                        <h3>Voting App</h3>
+                        <h3>Voting Website</h3>
                         <p>A page with animated glow effects, password-protected voting, and mobile-responsive design for an engaging experience.</p>
                         <div class="project-tags">
                             <span class="project-tag">HTML</span>
@@ -156,74 +154,44 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <div class="section-title">
-                <h2>Get In Touch</h2>
-            </div>
-            <div class="contact-container">
-                <div class="contact-info">
-                    <h3>Contact Information</h3>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-envelope"></i>
-                        </div>
-                        <div>
-                            <h4>Email</h4>
-                            <p>kawaixu1101@gmail.com</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-phone"></i>
-                        </div>
-                        <div>
-                            <h4>Phone</h4>
-                            <p>(+852) 52600195</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-map-marker-alt"></i>
-                        </div>
-                        <div>
-                            <h4>Location</h4>
-                            <p>Hong Kong</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="contact-form" style="flex: 1;">
-                    <h3>Send Me a Message</h3>
-                    <form id="contactForm" style="display: grid; gap: 20px;">
-                        <input type="text" placeholder="Your Name" required style="padding: 15px; border: 1px solid #ddd; border-radius: 5px; font-family: 'Poppins', sans-serif;">
-                        <input type="email" placeholder="Your Email" required style="padding: 15px; border: 1px solid #ddd; border-radius: 5px; font-family: 'Poppins', sans-serif;">
-                        <textarea placeholder="Your Message" rows="5" required style="padding: 15px; border: 1px solid #ddd; border-radius: 5px; font-family: 'Poppins', sans-serif;"></textarea>
-                        <button type="submit" class="btn">Send Message</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
         <div class="container">
             <div class="footer-content">
-                <div>
-                    <div class="footer-logo">Portfolio<span>.</span></div>
-                    <p>Thank you for visiting my portfolio. Feel free to reach out for collaboration or just to say hello!</p>
+                <div class="footer-info">
+                    <h3>Contact Information</h3>
+                    <div class="footer-contact">
+                        <div class="contact-item">
+                            <div class="contact-icon">
+                                <i class="fas fa-envelope"></i>
+                            </div>
+                            <div>
+                                <h4>Email</h4>
+                                <p>kawaixu1101@gmail.com</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <div class="contact-icon">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                            <div>
+                                <h4>Phone</h4>
+                                <p>(+852) 52600195</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div>
+                <div class="footer-links">
                     <h3>Quick Links</h3>
-                    <ul style="list-style: none;">
-                        <li><a href="#home" style="color: white; text-decoration: none; line-height: 2;">Home</a></li>
-                        <li><a href="#about" style="color: white; text-decoration: none; line-height: 2;">About</a></li>
-                        <li><a href="#projects" style="color: white; text-decoration: none; line-height: 2;">Projects</a></li>
-                        <li><a href="#contact" style="color: white; text-decoration: none; line-height: 2;">Contact</a></li>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#education">Education</a></li>
+                        <li><a href="#projects">Projects</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="footer-social">
                     <h3>Follow Me</h3>
                     <div class="social-links">
                         <a href="https://github.com/Funnywai" target="_blank"><i class="fab fa-github"></i></a>
