--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="/FLACK/flack.png" alt="" style="width: 100%; height: 130%;">
+                        <img src="/FLACK/flack.png" style="width: 100%; height: 130%;">
                     </div>
                     <div class="project-info">
                         <h3>Voting Website</h3>
@@ -148,6 +148,20 @@
                             <span class="project-tag">FireBase RealTime DataBase</span>
                         </div>
                         <a href="/FLACK" class="btn">View Project</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-img">
+                        <img src="MahJong.png" >
+                    </div>
+                    <div class="project-info">
+                        <h3>MahJong Scoring Website</h3>
+                        <p>This is a digital Mahjong scoreboard to track scores, wins, and history, featuring dealer tracking and payout calculations.</p>
+                        <div class="project-tags">
+                            <span class="project-tag">FireBase Studio</span>
+                            <span class="project-tag">NextJs</span>
+                        </div>
+                        <a href="https://6000-firebase-studio-1767527144229.cluster-zkm2jrwbnbd4awuedc2alqxrpk.cloudworkstations.dev/" class="btn">View Project</a>
                     </div>
                 </div>
             </div>
