Fix profile image alt attribute in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="about-content">
                 <div class="profile-img">
-                    <img src="" alt="Profile Picture">
+                    <img src="" alt="">
                 </div>
                 <div class="about-text">
                     <h3>Hello! I'm Xu Ka Wai Kenny</h3>
