--- a/FLACK/index.html
+++ b/FLACK/index.html
@@ -33,7 +33,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('flack.png');
+            background-image: url('../Picture/flack.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
