--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="/FLACK/flack.png" style="width: 100%; height: 130%;">
+                        <img src="/Picture/flack.png" style="width: 100%; height: 130%;">
                     </div>
                     <div class="project-info">
                         <h3>Voting Website</h3>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="MahJong.png" >
+                        <img src="/Picture/MahJong.png" >
                     </div>
                     <div class="project-info">
                         <h3>MahJong Scoring Website</h3>
