--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="/Picture/flack.png" style="width: 100%; height: 130%;">
+                        <img src="Picture/flack.png" style="width: 100%; height: 130%;">
                     </div>
                     <div class="project-info">
                         <h3>Voting Website</h3>
@@ -162,6 +162,22 @@
                             <span class="project-tag">NextJs</span>
                         </div>
                         <a href="https://6000-firebase-studio-1767527144229.cluster-zkm2jrwbnbd4awuedc2alqxrpk.cloudworkstations.dev/" class="btn">View Project</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-img">
+                        <img src="Picture/HKCulturalEvents.png" >
+                    </div>
+                    <div class="project-info">
+                        <h3>Hong Kong Cultural Events Website</h3>
+                        <p>A website showcasing real time cultural events in Hong Kong with Goole Map</p>
+                        <div class="project-tags">
+                            <span class="project-tag">MongoDB</span>
+                            <span class="project-tag">React</span>
+                            <span class="project-tag">Express.js</span>
+                            <span class="project-tag">Vercel</span>
+                        </div>
+                        <a href="https://csci-2720-project-eight.vercel.app/" class="btn">View Project</a>
                     </div>
                 </div>
             </div>
