--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             <span class="project-tag">FireBase Studio</span>
                             <span class="project-tag">NextJs</span>
                         </div>
-                        <a href="https://6000-firebase-studio-1767527144229.cluster-zkm2jrwbnbd4awuedc2alqxrpk.cloudworkstations.dev/" class="btn">View Project</a>
+                        <a href="https://mj-ashen-alpha.vercel.app/" class="btn">View Project</a>
                     </div>
                 </div>
                 <div class="project-card">
