--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <h3>MahJong Scoring Website</h3>
                         <p>This is a digital Mahjong scoreboard to track scores, wins, and history, featuring dealer tracking and payout calculations.</p>
                         <div class="project-tags">
-                            <span class="project-tag">FireBase Studio</span>
+                            <span class="project-tag">Vercel</span>
                             <span class="project-tag">NextJs</span>
                         </div>
                         <a href="https://mj-ashen-alpha.vercel.app/" class="btn">View Project</a>
