--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header & Navigation -->
     <header>
         <div class="container nav-container">
-            <a href="#" class="logo">Portfolio<span>.</span></a>
+            <a href="#" class="logo">Profile<span>.</span></a>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
             </button>
