--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                                 <i class="fas fa-file-excel"></i>
                                 <span>VBA</span>
                             </div>
+                            <div class="tech-badge" data-animate="pop" data-delay="450">
+                                <i class="fas fa-file-excel"></i>
+                                <span>HTML/CSS</span>
+                            </div>
                         </div>
                     </div>
                     
@@ -312,8 +316,7 @@
                                     <h3>Voting Website</h3>
                                     <p>Interactive voting platform with animated glow effects and real-time updates.</p>
                                     <div class="project-tech">
-                                        <span>HTML</span>
-                                        <span>CSS</span>
+                                        <span>HTML/CSS</span>
                                         <span>JavaScript</span>
                                         <span>Firebase</span>
                                     </div>
