--- a/index.html
+++ b/index.html
@@ -134,9 +134,14 @@
                                 <span>VBA</span>
                             </div>
                             <div class="tech-badge" data-animate="pop" data-delay="450">
-                                <i class="fas fa-file-excel"></i>
-                                <span>HTML/CSS</span>
+                                <i class="fab fa-html5"></i>
+                                <span>HTML</span>
                             </div>
+                            <div class="tech-badge" data-animate="pop" data-delay="500">
+                                <i class="fab fa-css3-alt"></i>
+                                <span>CSS</span>
+                            </div>
+
                         </div>
                     </div>
                     
