--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </button>
                 <button class="tab-btn" data-tab="work">
                     <i class="fas fa-briefcase"></i>
-                    Work
+                    Work & Experience
                 </button>
             </div>
 
@@ -258,7 +258,7 @@
                     </div>
                 </div>
 
-                <!-- Work Timeline -->
+                <!-- Work & Experience Timeline -->
                 <div class="timeline" id="work-timeline">
                     <div class="timeline-track"></div>
                     
@@ -272,9 +272,10 @@
                                 <span class="timeline-date">July - August 2025</span>
                             </div>
                             <h3>Technical Support Intern</h3>
-                            <p class="timeline-subtitle">Civil Aviation Department</p>
+                            <p class="timeline-subtitle">Air Traffic Management Department, Civil Aviation Department </p>
                             <ul class="timeline-details">
-                                <li>Technical support and IT operations</li>
+                                <li>Developed and implemented a VBA-based tool to automate performance analysis tasks in air traffic management</li>
+                                <li>Built an internal AI assistant (ICAO Chatbot) using Dify to perform local network document search with Retrieval-Augmented Generation (RAG)</li>
                             </ul>
                         </div>
                     </div>
@@ -294,6 +295,24 @@
                             </ul>
                         </div>
                     </div>
+
+                    <div class="timeline-item" data-animate="fade-up">
+                        <div class="timeline-marker">
+                            <div class="marker-dot"></div>
+                            <div class="marker-pulse"></div>
+                        </div>
+                        <div class="timeline-card">
+                            <div class="card-header">
+                                <span class="timeline-date">July - August 2025</span>
+                            </div>
+                            <h3>Technical Support Intern</h3>
+                            <p class="timeline-subtitle">Civil Aviation Department</p>
+                            <ul class="timeline-details">
+                                <li>Technical support and IT operations</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
