--- a/index.html
+++ b/index.html
@@ -286,7 +286,23 @@
                         </div>
                         <div class="timeline-card">
                             <div class="card-header">
-                                <span class="timeline-date">Feb - Mar 2023</span>
+                                <span class="timeline-date">Mar - Oct 2025</span>
+                            </div>
+                            <h3>ShawLane25</h3>
+                            <p class="timeline-subtitle">Vice director of Administration Department </p>
+                            <ul class="timeline-details">
+                                <li>Provide Administrative support for school event</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item" data-animate="fade-up" data-delay="200">
+                        <div class="timeline-marker">
+                            <div class="marker-dot"></div>
+                        </div>
+                        <div class="timeline-card">
+                            <div class="card-header">
+                                <span class="timeline-date">Feb - Mar 2025</span>
                             </div>
                             <h3>Gotta GO! Sustainable Explorer Challenge</h3>
                             <p class="timeline-subtitle">Hong Kong Express - Participant</p>
@@ -296,22 +312,23 @@
                         </div>
                     </div>
 
-                    <div class="timeline-item" data-animate="fade-up">
+
+                    <div class="timeline-item" data-animate="fade-up" data-delay="300">
                         <div class="timeline-marker">
                             <div class="marker-dot"></div>
-                            <div class="marker-pulse"></div>
                         </div>
                         <div class="timeline-card">
                             <div class="card-header">
-                                <span class="timeline-date">July - August 2025</span>
+                                <span class="timeline-date">Feb - Mar 2025</span>
                             </div>
-                            <h3>Technical Support Intern</h3>
-                            <p class="timeline-subtitle">Civil Aviation Department</p>
+                            <h3>Gotta GO! Sustainable Explorer Challenge</h3>
+                            <p class="timeline-subtitle">Hong Kong Express - Participant</p>
                             <ul class="timeline-details">
-                                <li>Technical support and IT operations</li>
+                                <li>Sustainability innovation challenge</li>
                             </ul>
                         </div>
                     </div>
+
 
                 </div>
             </div>
