--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                             <div class="card-header">
                                 <span class="timeline-date">July - August 2025</span>
                             </div>
-                            <h3>Technical Support Intern</h3>
-                            <p class="timeline-subtitle">Air Traffic Management Department, Civil Aviation Department </p>
+                            <h3>Air Traffic Management Department, Civil Aviation Department</h3>
+                            <p class="timeline-subtitle"> Technical Support Intern</p>
                             <ul class="timeline-details">
                                 <li>Developed and implemented a VBA-based tool to automate performance analysis tasks in air traffic management</li>
                                 <li>Built an internal AI assistant (ICAO Chatbot) using Dify to perform local network document search with Retrieval-Augmented Generation (RAG)</li>
@@ -291,7 +291,7 @@
                             <h3>ShawLane25</h3>
                             <p class="timeline-subtitle">Vice director of Administration Department </p>
                             <ul class="timeline-details">
-                                <li>Provide Administrative support for school event</li>
+                                <li>Provided Administrative support for school event</li>
                             </ul>
                         </div>
                     </div>
@@ -319,12 +319,28 @@
                         </div>
                         <div class="timeline-card">
                             <div class="card-header">
-                                <span class="timeline-date">Feb - Mar 2025</span>
+                                <span class="timeline-date">Mar - Oct 2024</span>
                             </div>
-                            <h3>Gotta GO! Sustainable Explorer Challenge</h3>
-                            <p class="timeline-subtitle">Hong Kong Express - Participant</p>
+                            <h3>ShawLane24</h3>
+                            <p class="timeline-subtitle">Director of Promotion Department </p>
                             <ul class="timeline-details">
-                                <li>Sustainability innovation challenge</li>
+                                <li>Managed and prepared promotional materials for school event</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item" data-animate="fade-up" data-delay="400">
+                        <div class="timeline-marker">
+                            <div class="marker-dot"></div>
+                        </div>
+                        <div class="timeline-card">
+                            <div class="card-header">
+                                <span class="timeline-date">Feb 2024 - Jan 2025</span>
+                            </div>
+                            <h3>The Resident Association of Student Hostel II of Shaw College</h3>
+                            <p class="timeline-subtitle">Promotion Secretary </p>
+                            <ul class="timeline-details">
+                                <li>Managed and prepared promotional materials for hostel activities</li>
                             </ul>
                         </div>
                     </div>
