--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             <div class="card-header">
                                 <span class="timeline-date">Mar - Oct 2025</span>
                             </div>
-                            <h3>ShawLane25</h3>
+                            <h3>ShawLane25, Shaw College</h3>
                             <p class="timeline-subtitle">Vice director of Administration Department </p>
                             <ul class="timeline-details">
                                 <li>Provided Administrative support for school event</li>
@@ -304,8 +304,8 @@
                             <div class="card-header">
                                 <span class="timeline-date">Feb - Mar 2025</span>
                             </div>
-                            <h3>Gotta GO! Sustainable Explorer Challenge</h3>
-                            <p class="timeline-subtitle">Hong Kong Express - Participant</p>
+                            <h3>Gotta GO! Sustainable Explorer Challenge, Hong Kong Express</h3>
+                            <p class="timeline-subtitle">Participant</p>
                             <ul class="timeline-details">
                                 <li>Sustainability innovation challenge</li>
                             </ul>
@@ -321,7 +321,7 @@
                             <div class="card-header">
                                 <span class="timeline-date">Mar - Oct 2024</span>
                             </div>
-                            <h3>ShawLane24</h3>
+                            <h3>ShawLane24, Shaw College</h3>
                             <p class="timeline-subtitle">Director of Promotion Department </p>
                             <ul class="timeline-details">
                                 <li>Managed and prepared promotional materials for school event</li>
@@ -337,7 +337,7 @@
                             <div class="card-header">
                                 <span class="timeline-date">Feb 2024 - Jan 2025</span>
                             </div>
-                            <h3>The Resident Association of Student Hostel II of Shaw College</h3>
+                            <h3>The Resident Association of Student Hostel II of Shaw College, Shaw College</h3>
                             <p class="timeline-subtitle">Promotion Secretary </p>
                             <ul class="timeline-details">
                                 <li>Managed and prepared promotional materials for hostel activities</li>
