--- a/index.html
+++ b/index.html
@@ -235,7 +235,10 @@
                             <p class="timeline-subtitle">Bachelor of Science in Computer Science</p>
                             <ul class="timeline-details">
                                 <li>CGPA: 3.281</li>
-                                <li>Focus: Software Development & Data Science</li>
+                                <li>Focus: Web development, full-stack applications, and software engineering</li>
+                                <li>Vice-Director of Administration Department of ShawLane25, Shaw College </li>
+                                <li>Director of Promotion Department of ShawLane24, Shaw College </li>
+                                <li>Promotion Secretary of The Resident Association of Student Hostel II of Shaw College</li>
                             </ul>
                         </div>
                     </div>
@@ -279,24 +282,8 @@
                             </ul>
                         </div>
                     </div>
-                    
-                    <div class="timeline-item" data-animate="fade-up" data-delay="100">
-                        <div class="timeline-marker">
-                            <div class="marker-dot"></div>
-                        </div>
-                        <div class="timeline-card">
-                            <div class="card-header">
-                                <span class="timeline-date">Mar - Oct 2025</span>
-                            </div>
-                            <h3>ShawLane25, Shaw College</h3>
-                            <p class="timeline-subtitle">Vice director of Administration Department </p>
-                            <ul class="timeline-details">
-                                <li>Provided Administrative support for school event</li>
-                            </ul>
-                        </div>
-                    </div>
 
-                    <div class="timeline-item" data-animate="fade-up" data-delay="200">
+                    <div class="timeline-item" data-animate="fade-up" data-delay="100">
                         <div class="timeline-marker">
                             <div class="marker-dot"></div>
                         </div>
@@ -308,39 +295,6 @@
                             <p class="timeline-subtitle">Participant</p>
                             <ul class="timeline-details">
                                 <li>Sustainability innovation challenge</li>
-                            </ul>
-                        </div>
-                    </div>
-
-
-                    <div class="timeline-item" data-animate="fade-up" data-delay="300">
-                        <div class="timeline-marker">
-                            <div class="marker-dot"></div>
-                        </div>
-                        <div class="timeline-card">
-                            <div class="card-header">
-                                <span class="timeline-date">Mar - Oct 2024</span>
-                            </div>
-                            <h3>ShawLane24, Shaw College</h3>
-                            <p class="timeline-subtitle">Director of Promotion Department </p>
-                            <ul class="timeline-details">
-                                <li>Managed and prepared promotional materials for school event</li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item" data-animate="fade-up" data-delay="400">
-                        <div class="timeline-marker">
-                            <div class="marker-dot"></div>
-                        </div>
-                        <div class="timeline-card">
-                            <div class="card-header">
-                                <span class="timeline-date">Feb 2024 - Jan 2025</span>
-                            </div>
-                            <h3>The Resident Association of Student Hostel II of Shaw College, Shaw College</h3>
-                            <p class="timeline-subtitle">Promotion Secretary </p>
-                            <ul class="timeline-details">
-                                <li>Managed and prepared promotional materials for hostel activities</li>
                             </ul>
                         </div>
                     </div>
